@@ -26,6 +26,8 @@ new:
   choice even if this results in double recordings.
 - epgsearch now uses the shutdown handler (introduced in vdr 1.5.1) to prevent a 
   search timer update to be interrupted.
+- the SVDRP command UPDS for triggering search timer updates has now a new option 
+  'SCAN' that will execute an EPG scan before the search timer update actually starts.
 fixes:
 - fixed a crash when pressing 'Ok' in an empty timers done menu
 - fixed a crash when using the progressbar and events with 0 duration exist, thanks 
